# yet-another-playback-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  OPTIMIZATION_GUIDE.md  README.md  blocking_queue_bench.cpp  media_clock_bench.cpp  memory_allocation_bench.cpp
docs/: QUALITY_ASSURANCE_SETUP.md  TESTING_GUIDE.md
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/sdl_renderer/: CMakeLists.txt  main.cpp
examples/sdl_renderer/include/: audio_renderer_factory.hpp  video_renderer.hpp  video_renderer_factory.hpp
examples/sdl_renderer/include/sdl/: audio_renderer.hpp  audio_renderer_factory.hpp  video_renderer.hpp  video_renderer_factory.hpp
examples/sdl_renderer/source/: audio_renderer.cpp
examples/sdl_renderer/source/sdl/: audio_renderer.cpp  video_renderer.cpp
examples/yapl_player/: CMakeLists.txt  main.cpp
planning/: refactor-architectural-improvements.md
scripts/: generate_coverage.sh  run_sanitizers.sh
tests/: CMakeLists.txt  blocking_queue_test.cpp
tests/data_sources/: file_test.cpp
tests/renderers/: media_clock_test.cpp
